--- a/SpringBootPro/pom.xml
+++ b/SpringBootPro/pom.xml
@@ -61,6 +61,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
+		
+		<!-- 基准测试 -->
+		 <dependency>
+	        <groupId>org.openjdk.jmh</groupId>
+	        <artifactId>jmh-core</artifactId>
+	        <version>0.4.1</version>
+	    </dependency>
 	</dependencies>
 
 	<build>
