--- a/SpringBootPro/src/main/resources/application.yml
+++ b/SpringBootPro/src/main/resources/application.yml
@@ -14,3 +14,9 @@ spring:
     hibernate:
       ddl-auto:  update
     show-sql: true
+    
+mybatis:
+  type-aliases-package: com.boot.entity
+    
+
+ 
