--- a/SpringBootPro/pom.xml
+++ b/SpringBootPro/pom.xml
@@ -71,6 +71,14 @@
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 		
+		
+		<!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+		<dependency>
+		    <groupId>com.alibaba</groupId>
+		    <artifactId>fastjson</artifactId>
+		    <version>1.2.32</version>
+		</dependency>
+		
 		<!-- thymeleaf 模版引擎 -->
 		<dependency>
             <groupId>org.springframework.boot</groupId>
